--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding:0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +12,216 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.App { 
+  max-width:1550%;
+  width: 100%;
+  min-height:100vr;
+  margin:0 auto;
+  box-shadow: 0 5px 6px #5d1cd519;
+  padding: 0 15;
+  box-sizing:border-box;
+} 
+
+
+
+header{ 
+   width:100%;
+   min-height:5px;
+   max-width: 100%;
+   overflow: hidden;
+   display:flex;
+   justify-content: space-around;
+   align-items: center;
+   flex-wrap: wrap;
+   position: fixed;
+   box-sizing:border-box;
+   background-color: white;
+   box-shadow: 0 5px 10px #5d1cd5;
+   position:fixed;
+   top: 0;
+   left : 0;  
+   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0 5px 10px #5d1cd5; 
+} 
+
+a{ 
+  color:black;
+  text-align: none;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+a:hover{ 
+  color: #5d1cd5bb;
+}
+
+li{
+  list-style:none;
+}
+
+header ol{ 
+  display:flex;
+  padding:0;
+  margin:0;
+
+}
+
+header ul li{
+  padding:0 1rem;
+ 
+} @media (max-width: 600px) {
+  body {
+    font-size: 16px;
+  }
+  header ul li {
+    margin: 0.5rem 0;
+  }
+}
+
+header ul li a{ 
+  font-weight:bold;
+} 
+
+header .cart{ 
+  position:relative;
+  cursor:pointer;
+} 
+ header.cart box-icon{ 
+  width: 45px;
+  height:45px;
+}
+
+header .cart span{ 
+ position:absolute;
+ top: -1rem;
+ right: -1.5rem;
+ width:  1.9rem;
+ height: 1.9rem;
+ 
+ border-radius: 50%;
+ display:flex;
+ align-items: center;
+ justify-content: center;
+ color:white;
+ padding:0rem;
+ font: size 1.5rem;
+ font-weight: 700;
+ background-color: #ff1919;
+}
+.imagen1{ 
+  height:150px;
+  width:150px;
+}
+.title{ 
+  font-size:2.0rem;
+  padding: 50px 0 0rem;
+  color:#5d1cd5;
+}
+.producto{ 
+  display:flex;
+  width:100%;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 1px 10px 10px 2px rgb(0, 0, 0 .2);
+  border:6px solid transparent;
+  border-radius: 5px;
+}
+.producto:hover{
+ border:6px solid #5d1cd5;
+}
+.producto_img img{ 
+ width:130px;
+}
+.producto_footer{ 
+  padding: 1rem;
+}
+.producto_footer h1{ 
+ font-weight: 600;
+ font-size: 1.5rem;
+ color:#000000;
+ font-family: Helvetica, sans-serif;
+}
+.producto_footer p{ 
+  font-weight: 700;
+  color:rgb (0, 0, 0, .555) ;
+  text-transform: uppercase;
+  font-size: 18px;
+} .producto_footer .price{ 
+  font-size: 1rem;
+  color:#29252f;
+} 
+.producto .boton{ 
+  width: 100%; 
+  height:45px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap:1rem 3rem;
+  padding: 0 1rem;
+  margin: 1rem;
+}
+ .boton {
+  border:none;
+  outline:0;
+  cursor:pointer;
+  border-radius: 5px;
+}
+.btn{
+  border: none;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 5px;
+}
+ .boton .btn{ 
+ background-color:#E6E6FA;
+ max-width: 250px;
+ width: 100%;
+ margin: 0 auto;
+ font-size: 1.0rem;
+ color:rgb(0, 0, 0);
+ font-weight: 600;
+ } 
+  .boton div{
+  background-color: #5d1cd5;
+  display: grid;
+  align-items: center;
+  margin-left: -2rem;
+  border-radius: 5px;
+  text-align: center;
+  }
+   .boton div a{ 
+    color:rgb(0, 0, 0);
+    font-weight: 700;
+
+  } .boton div a:hover{ 
+    color:rgb(0, 0, 0);
+
+  } 
+ .productos{ 
+  padding:5 rem 1rem;
+  margin:0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  gap: 3rem 2rem;
+  box-sizing: border-box;
+} .producto_img img {
+  width: 250px;
+  height: 250px;
+}
+@media only screen and (max-width:600px){ 
+  header ul {
+    display: none;
+  }
+} /* Mostrar elementos del menú en pantallas más pequeñas */
+@media (max-width: 600px) {
+  header ul {
+    display: flex;
+    flex-direction: column;
+  }
+  header ul li {
+    padding: 0.5rem 0;
+  }
+}
+  
