se agrego nuevos componentes, para la lista produc tos. y se agregaron los datos de los productos en data.js.

--- a/src/index.css
+++ b/src/index.css
@@ -222,7 +222,9 @@ header .cart span{
 } .title2{ 
   margin:0;
   padding:0;
-} @media (max-width: 600px) {
+} 
+
+@media (max-width: 600px) {
   .inicio2 {
     margin-top: 80px;
   }
